<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="202dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:paddingBottom="8dp"
            android:src="@drawable/calc" />

        <TextView
            android:id="@+id/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/texto" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gravedad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="3dp"
                android:text="@string/gravedad"
                android:backgroundTint="@color/azul"/>

            <Button
                android:id="@+id/jumanji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/jumanji"
                android:backgroundTint="@color/azul"/>

            <Button
                android:id="@+id/rey_leon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rey_leon"
                android:backgroundTint="@color/azul"/>
        </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/star_wars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:gravity="center"
                        android:text="@string/star_wars"
                        android:backgroundTint="@color/azul"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/origen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/origen"
                    android:backgroundTint="@color/azul"/>

                <Button
                    android:id="@+id/toy_story"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/toy_story"
                    android:backgroundTint="@color/azul"/>



            </LinearLayout>
    </LinearLayout>
</layout>